# img-score-ai

./: .gitignore  pyproject.toml  test_embed.py  学習.md
data/classified/dislike/: README.txt
data/classified/like/: README.txt
data/scores/: README.txt
data/train/dislike/: README.txt
data/train/like/: README.txt
data/unlabeled/: README.txt
docs/: README.md  学習.md
models/clip/: README.txt
models/trained/: README.txt
scripts/: check_env.py  classify.py  score.py  train.py
