[project]
name = "img-score-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "open-clip-torch>=3.2.0",
    "pillow>=12.0.0",
]

[tool.uv]
# PyTorch must be installed manually by users for their specific environment
override-dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
